Added VolumeLevel, volume setting delegate function. (#153)
* Added VolumeLevel, volume setting delegate function.

* Fixed image per volume level.

* Updated image gravity, setting default volume.

--- a/WindowExplorer/Sources/Controllers/MediaControllers/PlayerViewController/Player.storyboard
+++ b/WindowExplorer/Sources/Controllers/MediaControllers/PlayerViewController/Player.storyboard
@@ -71,7 +71,7 @@
                                     <constraint firstAttribute="width" constant="570" id="pfl-hW-FMx"/>
                                     <constraint firstAttribute="height" constant="29" id="xMt-aB-HMi"/>
                                 </constraints>
-                                <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="This is a title with a j and a g and a p." usesSingleLineMode="YES" id="Tzu-z0-dav">
+                                <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" usesSingleLineMode="YES" id="Tzu-z0-dav">
                                     <font key="font" size="16" name="Soleil"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
